# listen-in

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MCP_USAGE.md  PAYMENT_GATEWAY_GUIDE.md  README.md  TODO.md  elevenlabs_server.py  env.example  generate_test_output.py  output_example.md  pyproject.toml  requirements.txt  setup-payment-gateway.sh  simulate_podcast_generation.py  spec.md  test-tts-direct.sh  test_complete_pipeline.py  test_dialogue_5min.py  test_dialogue_direct.py  test_dialogue_pipeline.py  test_direct_pipeline.py  test_elevenlabs.py  test_end_to_end.py  test_o3_model.py  test_o3_node.js  test_o3_pipeline.py  test_pdf_parsing.py  test_podcast_generation.py  test_simple_pipeline.py
ai-docs/: elevenlabs-elevenlabs-mcp (1).txt  elevenlabs-summary.md  fast-mcp.md  mcp-tool.md  openai-sdk.md
docs/: architecture.md
example-script/: gdpr_podcast_script.txt  gdpr_podcast_script_fun.txt
examples/: gdpr_excerpt.txt  gdpr_excerpt_test.txt  gdpr_regulation.txt  gdpr_small_test.txt  sample_article.txt
listen_in/: __main__.py  config.py  server.py
listen_in/generators/: agent_generator.py  audio_generator.py  dialogue_audio_generator.py  dialogue_generator.py  monologue_generator.py  o3_generator.py  simple_audio_generator.py  simple_dialogue_audio.py
listen_in/parsers/: pdf_parser.py  text_parser.py
listen_in/utils/: file_utils.py
payment-gateway-mcp/: README.md  package-lock.json  package.json  tsconfig.json
payment-gateway-mcp/src/: index.ts  x402-payment-server.ts
test_docs/: ai_ethics.txt
