[project]
name = "listen-in"
version = "0.1.0"
description = "Transform local documents into engaging podcast scripts using AI"
authors = [{name = "Adam Anzuoni"}]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "openai>=1.0.0", 
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
listen-in = "listen_in.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true